see desc
 - Fixed parsing existing configs
 - Fixed typo identify_secret => identity secret
 - Improved support for Java 12